--- a/client/src/components/layouts/auth-layout/auth-layout.css
+++ b/client/src/components/layouts/auth-layout/auth-layout.css
@@ -14,21 +14,32 @@
 }
 
 .auth-layout__illustration {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    row-gap: var(--spacing-4);
+    position: relative;
     flex-basis: 50%;
 
-    padding-inline: var(--spacing-24);
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    row-gap: var(--spacing-4); */
+
+    /* padding-inline: var(--spacing-24);
     padding-block: var(--spacing-12);
 
     background-color: var(--color-brand-100);
-    color: var(--color-brand-700);
+    color: var(--color-brand-700); */
 }
+
 .auth-layout--reversed .auth-layout__illustration {
     align-items: flex-end;
     text-align: end;
+}
+.auth-layout__illustration img {
+    position: absolute;
+    inset: 0;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media (max-width: 880px) {
@@ -49,6 +60,12 @@
 .auth-layout__form-container {
     max-width: 440px;
     margin-inline: auto;
+}
+.auth-layout__form-container > a {
+    display: block;
+    width: fit-content;
+    margin-inline: auto;
+    margin-bottom: var(--spacing-6);
 }
 
 .auth-layout__form {
